--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ section .address-info p {
 }
 @media (max-width:767px) {
     .services-content {
-        grid-template-columns: repeat(auto-fit , minmax(350px , 1fr));
+        grid-template-columns: 1fr;
     }
     .services-content .card {
         flex-direction: column;
@@ -328,4 +328,196 @@ section .address-info p {
         margin-right: 0;
         margin-bottom: 25px;
     }
+}
+/* phone ad  */
+section .phone-ad {
+    position: relative;
+}
+section .phone-ad::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    background-image: url(../images/design-features.jpg);
+    background-size: cover;
+    z-index: -50;
+    height: 100%;
+    top: 0;
+    filter: brightness(40%);
+}
+.phone-ad .text {
+    width: 50%;
+    padding: 50px;
+    color: white;
+    position: relative;
+}
+.phone-ad .text h2 {
+    margin-bottom: 50px;
+    font-weight: 400;
+}
+.phone-ad .text p {
+    margin-bottom: 25px;
+}
+.phone-ad .text p i{
+    margin-right: 20px;
+}
+.phone-ad .text::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(15 116 143);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 70%;
+}
+.phone-ad .content {
+    display: flex;
+    flex-flow: row nowrap;
+}
+.phone-ad .mobile-img {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.phone-ad .mobile-img img {
+    position: absolute;
+    bottom: -60px;
+    z-index: -1;
+}
+@media (max-width: 767px) {
+    .phone-ad .mobile-img {
+        display: none;
+    }
+    .phone-ad .text {
+        width: 100%;
+    }
+}
+/* portfolio */
+#portfolio {
+    background-color: white;
+}
+#portfolio .address-info p {
+    padding-bottom: 0;
+}
+/* images sec  */
+.images-sec {
+    padding-bottom: 120px;
+}
+.images-sec .links ul {
+    display: flex;
+    justify-content: center;
+}
+.images-sec .links ul li:hover a,
+.images-sec .links ul li:first-child a{
+    background-color: var(--main-color);
+    color: white;
+}
+.images-sec .links ul li a {
+    display: block;
+    padding: 10px;
+    color: black;
+}
+.images-sec .images {
+    display: grid;
+    grid-template-columns: repeat(4 , 0.25fr);
+    padding: 60px 0 40px;
+}
+.images-sec .images .img {
+    position: relative;
+    overflow: hidden;
+}
+.images-sec .images .img img{
+    width: 100%;
+    transition: 0.3s ease;
+}
+.images-sec .images .img:hover img {
+    transform: rotate(3deg) scale(1.1);
+    filter: blur(2px);
+}
+.images-sec .images .img p {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -100px;
+    background-color: white;
+    padding: 20px;
+    line-height: 1.7;
+    transition: 0.3s ease;
+}
+.images-sec .images .img p span {
+    color: var(--main-color);
+}
+.images-sec .images .img:hover p {
+    bottom: 0;
+}
+@media (max-width: 767px) {
+    .images-sec .images {
+        grid-template-columns: 1fr;
+    }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+    .images-sec .images {
+        grid-template-columns: repeat(2 , 0.5fr);
+    }
+}
+.images-sec .more-btn {
+    text-align: center;
+}
+.images-sec .more-btn button {
+    background-color: var(--main-color);
+    color: white;
+    border: none;
+    padding: 15px 20px;
+    cursor: pointer;
+}
+#portfolio .video-sec {
+    position: relative;
+}
+#portfolio .video-sec video{
+    width: 100%;
+    filter: brightness(0.6);
+}
+#portfolio .video-sec .vid-text {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    text-align: center;
+    padding: 40px;
+    color: white;
+}
+#portfolio .video-sec .vid-text::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(15 116 143);
+    opacity: 70%;
+    z-index: -4;
+    width: 100%;
+    height: 100%;
+}
+#portfolio .video-sec .vid-text h2 {
+    font-weight: 400;
+}
+#portfolio .video-sec .vid-text p {
+    padding: 30px;
+}
+#portfolio .video-sec .vid-text button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+/* About Section  */
+#about .sec-one  {
+    position: relative;
+}
+#about .about-img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
